// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-radio #render should render component as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-radio class="gux-input-error">
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error gux-show" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input aria-describedby="gux-form-field-error-i" aria-invalid="true" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
  <span id="gux-form-field-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-radio>
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when checked 1`] = `
<gux-form-field-radio>
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input checked="" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when default 1`] = `
<gux-form-field-radio>
  <template shadowrootmode="open">
    <div aria-disabled="false" class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when disabled 1`] = `
<gux-form-field-radio class="gux-disabled">
  <template shadowrootmode="open">
    <div aria-disabled="true" class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input disabled="" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when disabled with error 1`] = `
<gux-form-field-radio class="gux-disabled gux-input-error">
  <template shadowrootmode="open">
    <div aria-disabled="true" class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error gux-show" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input aria-describedby="gux-form-field-error-i" aria-invalid="true" disabled="" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
  <span id="gux-form-field-error-i" slot="error">
    Error message
  </span>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when disabled with help 1`] = `
<gux-form-field-radio class="gux-disabled">
  <template shadowrootmode="open">
    <div aria-disabled="true" class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input aria-describedby="gux-form-field-help-i" disabled="" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-radio>
`;
